--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       gap:12px;
       margin-top:14px;
       flex-wrap:wrap;
+      align-items:center;
     }
 
     .btn{
@@ -150,6 +151,20 @@
     .btn:disabled{
       opacity:0.6;
       cursor:not-allowed;
+    }
+
+    .lang-select{
+      min-width:140px;
+      border-radius:999px;
+      border:1px solid rgba(190,205,255,0.7);
+      background:rgba(4,10,30,0.9);
+      color:#dfe6ff;
+      font-size:12px;
+      padding:8px 12px;
+    }
+    .lang-select:focus{
+      outline:none;
+      border-color:#5aa3a6;
     }
 
     #status{
@@ -241,65 +256,12 @@
       text-shadow:0 2px 14px rgba(0,0,0,0.85);
     }
 
-    /* Sound controls */
-    .sunset-controls{
-      position:absolute;
-      top:22px;
-      left:20px;
-      background:rgba(6,10,30,0.72);
-      border-radius:18px;
-      padding:10px 12px;
-      color:#f5f7ff;
-      font-size:12px;
-      border:1px solid rgba(220,230,255,0.3);
-      backdrop-filter:blur(12px);
-      max-width:260px;
-    }
-    .sound-label{
-      margin-bottom:6px;
-      opacity:0.9;
-      font-size:11px;
-      letter-spacing:0.05em;
-      text-transform:uppercase;
-    }
-    .sound-options{
-      display:flex;
-      flex-wrap:wrap;
-      gap:6px;
-      margin-bottom:6px;
-    }
-    .sound-chip,
-    .voice-chip{
-      border-radius:999px;
-      border:1px solid rgba(220,230,255,0.4);
-      background:transparent;
-      color:#f5f7ff;
-      font-size:11px;
-      padding:4px 10px;
-      cursor:pointer;
-      white-space:nowrap;
-    }
-    .sound-chip.active,
-    .voice-chip.active{
-      background:#fefefe;
-      color:#11152b;
-    }
-    .voice-chip{
-      margin-top:2px;
-      font-size:11px;
-    }
-
     @media (max-width:600px){
       .card{
         padding:18px 16px;
       }
       .sunset-timer{
         bottom:40px;
-      }
-      .sunset-controls{
-        max-width:90%;
-        left:50%;
-        transform:translateX(-50%);
       }
       .sunset-quote{
         font-size:16px;
@@ -341,6 +303,13 @@
         <div class="actions">
           <button class="btn" id="analyzeBtn">Reflect with me</button>
           <button class="btn secondary" id="clearBtn">Clear</button>
+          <select id="analysisLangSelect" class="lang-select">
+            <option value="auto">🌐 System default</option>
+            <option value="en">English</option>
+            <option value="fr">Français</option>
+            <option value="es">Español</option>
+            <option value="ar">العربية</option>
+          </select>
         </div>
 
         <div id="status"></div>
@@ -356,48 +325,38 @@
 
   <!-- IMMERSIVE SUNSET FULLSCREEN -->
   <div class="sunset-fullscreen" id="sunsetFS">
-    <video id="sunsetVideo" autoplay muted playsinline>
-      <source src="Sunset-1V.mp4" type="video/mp4">
-    </video>
+    <video id="sunsetVideo" autoplay muted playsinline></video>
     <div class="sunset-quote" id="sunsetQuote"></div>
     <div class="sunset-timer" id="sunsetTimer">60</div>
     <div class="sunset-close" id="sunsetClose">×</div>
-
-    <div class="sunset-controls">
-      <div class="sound-label" id="soundLabel">Sound</div>
-      <div class="sound-options">
-        <button class="sound-chip active" data-sound="soft" id="soundSoft">Soft</button>
-        <button class="sound-chip" data-sound="ocean" id="soundOcean">Ocean</button>
-        <button class="sound-chip" data-sound="deep" id="soundDeep">Deep</button>
-        <button class="sound-chip" data-sound="ambient" id="soundAmbient">Ambient</button>
-      </div>
-      <button class="voice-chip" id="voiceToggle">🎧 Voice guide (coming soon)</button>
-    </div>
   </div>
 
-  <!-- AUDIO (one element, source changed in JS) -->
+  <!-- AUDIO -->
   <audio id="sunsetAudio" preload="auto"></audio>
 
   <script>
-    // ---------- Language + UI ----------
-    const lang = (navigator.language || navigator.userLanguage || "en").substring(0,2).toLowerCase();
+    // ---------- Langues de base ----------
+    const baseLang = (navigator.language || navigator.userLanguage || "en").substring(0,2).toLowerCase();
+    let currentLang = baseLang;      // langue utilisée pour analyse + quotes
+    let analysisLang = "";           // override manuel si choisi dans le select
+
+    const langSelect = document.getElementById("analysisLangSelect");
+    langSelect.addEventListener("change", () => {
+      const v = langSelect.value;
+      analysisLang = (v === "auto") ? "" : v;
+    });
 
     function applyLanguageUI(){
-      const subtitle = document.getElementById("subtitle");
+      const subtitle   = document.getElementById("subtitle");
       const checkTitle = document.getElementById("check-title");
-      const checkDesc = document.getElementById("check-desc");
+      const checkDesc  = document.getElementById("check-desc");
       const analyzeBtn = document.getElementById("analyzeBtn");
-      const clearBtn = document.getElementById("clearBtn");
-      const inputText = document.getElementById("inputText");
-      const sunsetBtn = document.getElementById("sunsetBtn");
-      const soundLabel = document.getElementById("soundLabel");
-      const soundSoft = document.getElementById("soundSoft");
-      const soundOcean = document.getElementById("soundOcean");
-      const soundDeep = document.getElementById("soundDeep");
-      const soundAmbient = document.getElementById("soundAmbient");
-      const voiceToggle = document.getElementById("voiceToggle");
+      const clearBtn   = document.getElementById("clearBtn");
+      const inputText  = document.getElementById("inputText");
+      const sunsetBtn  = document.getElementById("sunsetBtn");
+      const autoOpt    = langSelect.querySelector('option[value="auto"]');
 
-      if(lang === "fr"){
+      if(baseLang === "fr"){
         subtitle.textContent = "Avant de parler à un thérapeute, parlez à votre guide intérieur. Il vous écoute vraiment.";
         checkTitle.textContent = "Bilan émotionnel";
         checkDesc.textContent = "Décrivez ce que vous ressentez. Vous recevrez un miroir émotionnel et des micro-pratiques thérapeutiques.";
@@ -405,13 +364,8 @@
         clearBtn.textContent = "Effacer";
         inputText.placeholder = "Ex : Je me sens submergé(e)…";
         sunsetBtn.textContent = "🌅 Pause Sunset (60 s)";
-        soundLabel.textContent = "Ambiance sonore";
-        soundSoft.textContent = "Doux";
-        soundOcean.textContent = "Océan";
-        soundDeep.textContent = "Profond";
-        soundAmbient.textContent = "Ambient";
-        voiceToggle.textContent = "🎧 Guide vocal (bientôt)";
-      } else if(lang === "es"){
+        if(autoOpt) autoOpt.textContent = "🌐 Langue du système";
+      } else if(baseLang === "es"){
         subtitle.textContent = "Antes de hablar con un terapeuta, habla con tu guía interior. Él realmente te escucha.";
         checkTitle.textContent = "Revisión emocional";
         checkDesc.textContent = "Describe lo que sientes. Recibirás un espejo emocional y microprácticas terapéuticas.";
@@ -419,13 +373,8 @@
         clearBtn.textContent = "Borrar";
         inputText.placeholder = "Ej: Me siento abrumado(a)…";
         sunsetBtn.textContent = "🌅 Pausa Sunset (60 s)";
-        soundLabel.textContent = "Ambiente sonoro";
-        soundSoft.textContent = "Suave";
-        soundOcean.textContent = "Océano";
-        soundDeep.textContent = "Profundo";
-        soundAmbient.textContent = "Ambiental";
-        voiceToggle.textContent = "🎧 Guía de voz (pronto)";
-      } else if(lang === "ar"){
+        if(autoOpt) autoOpt.textContent = "🌐 Idioma del sistema";
+      } else if(baseLang === "ar"){
         subtitle.textContent = "قبل أن تتحدث مع معالج، تحدّث إلى دليلك الداخلي. إنه ينصت إليك حقًا.";
         checkTitle.textContent = "تقييم عاطفي";
         checkDesc.textContent = "صف ما تشعر به. ستحصل على انعكاس عاطفي وممارسات علاجية صغيرة.";
@@ -433,12 +382,7 @@
         clearBtn.textContent = "مسح";
         inputText.placeholder = "مثال: أشعر بأنني مُرهق…";
         sunsetBtn.textContent = "🌅 استراحة الغروب (60 ثانية)";
-        soundLabel.textContent = "الأجواء الصوتية";
-        soundSoft.textContent = "هادئ";
-        soundOcean.textContent = "بحر";
-        soundDeep.textContent = "عميق";
-        soundAmbient.textContent = "محـيطي";
-        voiceToggle.textContent = "🎧 مرشد صوتي (قريباً)";
+        if(autoOpt) autoOpt.textContent = "🌐 لغة النظام";
       } else {
         subtitle.textContent = "Before talking to a therapist, speak to your inner guide. It truly listens to you.";
         checkTitle.textContent = "Emotional Check-In";
@@ -447,12 +391,7 @@
         clearBtn.textContent = "Clear";
         inputText.placeholder = "Ex: I feel overwhelmed…";
         sunsetBtn.textContent = "🌅 Sunset Reset (60s)";
-        soundLabel.textContent = "Sound ambience";
-        soundSoft.textContent = "Soft";
-        soundOcean.textContent = "Ocean";
-        soundDeep.textContent = "Deep";
-        soundAmbient.textContent = "Ambient";
-        voiceToggle.textContent = "🎧 Voice guide (coming soon)";
+        if(autoOpt) autoOpt.textContent = "🌐 System default";
       }
     }
     applyLanguageUI();
@@ -571,22 +510,30 @@
       const text = inputEl.value.trim();
       if(!text) return;
 
+      const effectiveLang = analysisLang || baseLang;
+      currentLang = effectiveLang;
+
       analyzeBtn.disabled = true;
       clearBtn.disabled   = true;
-      statusEl.textContent = (lang === "fr") ? "Analyse en cours…" :
-                             (lang === "es") ? "Analizando…" :
-                             (lang === "ar") ? "جاري التحليل..." :
-                             "Analyzing…";
-      renderMessage("⏳ " + ((lang === "fr") ? "Je t’écoute…" :
-                             (lang === "es") ? "Te escucho…" :
-                             (lang === "ar") ? "أنا أستمع إليك..." :
-                             "I’m listening…"));
+
+      statusEl.textContent =
+        (effectiveLang === "fr") ? "Analyse en cours…" :
+        (effectiveLang === "es") ? "Analizando…" :
+        (effectiveLang === "ar") ? "جاري التحليل..." :
+        "Analyzing…";
+
+      renderMessage("⏳ " +
+        ((effectiveLang === "fr") ? "Je t’écoute…" :
+         (effectiveLang === "es") ? "Te escucho…" :
+         (effectiveLang === "ar") ? "أنا أستمع إليك..." :
+         "I’m listening…")
+      );
 
       try{
         const res = await fetch("/api/analyze", {
           method:"POST",
           headers:{ "Content-Type":"application/json" },
-          body:JSON.stringify({ text, lang })
+          body:JSON.stringify({ text, lang: effectiveLang })
         });
         const data = await res.json();
 
@@ -615,39 +562,25 @@
       sunsetBlock.style.display = "none";
     };
 
-    // ---------- Sound selection ----------
-    const SOUND_MAP = {
-      soft:    "sunset-soft.mp3",
-      ocean:   "sunset-ocean.mp3",
-      deep:    "sunset-deep.mp3",
-      ambient: "Sunset-ambient.mp4"   // tu peux le remplacer plus tard par un .mp3
-    };
+    // ---------- Random sounds & videos ----------
+    const VIDEO_SOURCES = [
+      "Sunset-1V.mp4",
+      "Sunset-2V.mp4",
+      "Sunset-3V.mp4",
+      "Sunset-4V.mp4",
+      "Sunset-ambient.mp4"
+    ];
 
-    // optionnel : voix guidée par langue (à ajouter plus tard)
-    const VOICE_MAP = {
-      fr: "voice-fr.mp3",
-      en: "voice-en.mp3",
-      es: "voice-es.mp3",
-      ar: "voice-ar.mp3"
-    };
+    const SOUND_SOURCES = [
+      "sunset-soft.mp3",
+      "sunset-ocean.mp3",
+      "sunset-deep.mp3",
+      "Sunset-ambient.mp4"
+    ];
 
-    const soundChips  = document.querySelectorAll(".sound-chip");
-    const voiceToggle = document.getElementById("voiceToggle");
-    let currentSoundKey = "soft";
-    let voiceEnabled = false;
-
-    soundChips.forEach(btn => {
-      btn.addEventListener("click", () => {
-        soundChips.forEach(b => b.classList.remove("active"));
-        btn.classList.add("active");
-        currentSoundKey = btn.dataset.sound;
-      });
-    });
-
-    voiceToggle.addEventListener("click", () => {
-      voiceEnabled = !voiceEnabled;
-      voiceToggle.classList.toggle("active", voiceEnabled);
-    });
+    function pickRandom(arr){
+      return arr[Math.floor(Math.random() * arr.length)];
+    }
 
     // ---------- Sunset Reset immersive ----------
     const FS         = document.getElementById("sunsetFS");
@@ -660,25 +593,26 @@
     let countdown;
 
     function startSunsetReset(){
+      // vidéo aléatoire
+      const randomVideo = pickRandom(VIDEO_SOURCES);
+      video.src = randomVideo;
+
+      // son aléatoire
+      const randomSound = pickRandom(SOUND_SOURCES);
+      audioEl.src = randomSound;
+
       FS.style.display = "flex";
       video.currentTime = 0;
-      video.play();
+      video.play().catch(()=>{});
 
-      // quote
-      const quote = getRandomQuote(lang);
+      // quote dans la langue actuelle effective
+      const quote = getRandomQuote(currentLang);
       quoteEl.textContent = quote;
-      quoteEl.style.direction = (lang === "ar") ? "rtl" : "ltr";
+      quoteEl.style.direction = (currentLang === "ar") ? "rtl" : "ltr";
 
-      // choose sound or voice
-      const langKey = QUOTES[lang] ? lang : "en";
-      let src = SOUND_MAP[currentSoundKey] || SOUND_MAP.soft;
-      if(voiceEnabled && VOICE_MAP[langKey]){
-        src = VOICE_MAP[langKey];   // à utiliser quand tu ajouteras les fichiers voix
-      }
-      audioEl.src = src;
       audioEl.currentTime = 0;
       audioEl.volume = 1;
-      audioEl.play().catch(()=>{ /* iOS peut bloquer si pas d’interaction */ });
+      audioEl.play().catch(()=>{});
 
       let time = 60;
       timer.textContent = time;
